--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -28,3 +28,14 @@ jobs:
     # no tests yet
     # - name: Test
     #   run: go test -v -race ./...
+  test:
+    name: Unit test
+    runs-on: ubuntu-latest
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+    - name: Install Go
+      uses: actions/setup-go@v4
+      with:
+        go-version: '1.23'
+    - run: make test
